--- a/FFHS/Semester 1/WebG/PA/src/css/feedback.css
+++ b/FFHS/Semester 1/WebG/PA/src/css/feedback.css
@@ -77,7 +77,7 @@ form {
     padding: 20px;
     margin: 20px auto;
     width: 50%;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    box-shadow: 0 4px 8px #00000019;
 }
 
 form fieldset {
@@ -131,7 +131,7 @@ footer {
 }
 
 /* Responsive behavior */
-@media (max-width: 768px) {
+@media (width <= 768px) {
     nav ul {
         display: none;
         flex-direction: column;
