--- a/FFHS/Semester 1/WebG/PA/src/css/global.css
+++ b/FFHS/Semester 1/WebG/PA/src/css/global.css
@@ -29,7 +29,8 @@ a {
     color: white;
     padding: 10px 0;
     text-align: center;
-    position: relative;
+    position: sticky;
+    top: 0;
 }
 
 .title {
@@ -81,7 +82,6 @@ a {
     top: 15px; /* Correct vertical alignment */
 }
 
-
 button {
     background-color: #006680;
     color: white;
@@ -89,12 +89,6 @@ button {
     cursor: pointer;
     border-radius: 4px;
 }
-
-
-
-
-
-
 
 
 /* Footer */
@@ -107,33 +101,3 @@ footer {
     width: 100%;
 }
 
-/* Responsive behavior */
-/*@media (max-width: 768px) {*/
-/*    nav ul {*/
-/*        display: none;*/
-/*        flex-direction: column;*/
-/*        justify-content: center;*/
-/*        background-color: #006680;*/
-/*        position: absolute;*/
-/*        top: 50px;*/
-/*        width: 100%;*/
-/*        padding: 10px 0;*/
-/*    }*/
-
-/*    nav ul.show {*/
-/*        display: flex;*/
-/*    }*/
-
-/*    .burger-menu {*/
-/*        display: block; !* Shows burger icon on mobile *!*/
-/*    }*/
-
-/*    nav ul li {*/
-/*        margin: 10px 0;*/
-/*    }*/
-
-/*    button {*/
-/*        width: 100%;*/
-/*        padding: 12px;*/
-/*    }*/
-/*}*/
